# formyself

./: .gitignore  CMakeLists.txt  README.md
src/: app_icon.rc  main.cpp
